$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-10-13 [B] Use IPTC headline instead of IPTC title as picture title according to docs (thread ID 61380) {eenemeenemuu}
2010-10-13 [B] Fixed implementation of plugin hook 'ip_information' (thread ID 67187) {eenemeenemuu}
2010-10-12 [B] Fixed last visit display in user manager when bridged with SMF2 (thread ID 67422) {eenemeenemuu}
2010-10-03 [B] Fixed template placeholder bug that caused cut off tags {Nibbler}
2010-10-02 [A] Added error message support for the batch add process {Nibbler}
2010-10-01 [B] Fixed use of mysql_insert_id (thread ID 67402) {Nibbler}
2010-10-01 [B] Fixed critical error on memberlist when bridged (thread ID 64678) {eenemeenemuu}
2010-09-30 [C] Fixed deprecated message on pluginmgr.php (thread ID 67308) {eenemeenemuu}
2010-09-27 [B] Fixed session table name in SMF bridge files (thread ID 67169) {eenemeenemuu}
2010-09-27 [C] Fixed error message if uploaded file exceeds dimension limit (thread ID 67282) {eenemeenemuu}
2010-09-26 [M] Removed support for GD1 (thread ID 66761) {Nibbler}
2010-09-26 [O] No longer specify a MySQL engine - use the server default. {Nibbler}
2010-09-20 [O] Updated jquery libraries 'elastic', 'datePicker', 'spinbox' {GauGau}
2010-09-20 [O] Updated embedded jquery library from version 1.3.2 to 1.4.2 {GauGau}
2010-09-16 [B] Fixed registration process if both email verification and admin activation enabled (thread ID 67095) {eenemeenemuu}
2010-09-13 [M] Increased version count from cpg1.5.9 to cpg1.6.01 {GauGau}
2010-09-12 [B] Fixed display of unprocessed bbcode markup in ecard display {Nibbler}